grammar/MmParser.java
// Generated from MmParser.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LineComment=1, BlockComment=2, WS=3, SQString=4, DQString=5, NQString=6, 
		String=7, CommandStart=8, CommandBlockComment=9, CommandLineComment=10, 
		CommandWS=11, RoleCommand=12, WaitCommand=13, SoundCommand=14, GroupCommand=15, 
		SettingsCommand=16, ParagraphCommand=17, CallCommand=18, ParagraphCommandBlockComment=19, 
		ParagraphCommandLineComment=20, ParagraphCommandWS=21, ParagraphName=22, 
		ParagraphParameterStart=23, ParagraphCommandEnd=24, ParagraphParameterComment=25, 
		ParagraphParameterLineComment=26, ParagraphParameterWS=27, ParagraphAlign=28, 
		ParagraphLeftMargin=29, ParagraphRightMargin=30, ParagraphMaxWidth=31, 
		ParagraphCase=32, ParagraphParameterEnd=33, ParagraphValue=34, SettingsCommandBlockComment=35, 
		SettingsCommandLineComment=36, SettingsCommandWS=37, SettingsParameterStart=38, 
		SettingsEnd=39, SettingsParameterComment=40, SettingsParameterLineComment=41, 
		SettingsParameterWS=42, SettingsTitle=43, SettingsSoundsFolder=44, SettingsTmpFolder=45, 
		SettingsAudioType=46, SettingsShow=47, SettingsDebug=48, SettingsDefaultLang=49, 
		SettingsLineWidth=50, SettingsValue=51, SettingsParameterEnd=52, RoleCommandBlockComment=53, 
		RoleCommandLineComment=54, RoleCommandWS=55, RoleName=56, RoleParameterStart=57, 
		RoleCommandEnd=58, RoleParameterBlockComment=59, RoleParameterLineComment=60, 
		RoleParameterWS=61, RolePitch=62, RoleRate=63, RoleGain=64, RoleVolume=65, 
		RoleAlias=66, RoleSOUND=67, RoleLang=68, RoleValue=69, RoleParameterEnd=70, 
		SoundCommandBlockComment=71, SoundCommandLineComment=72, SoundCommandWS=73, 
		SoundName=74, SoundParameterStart=75, SoundCommandEnd=76, SoundParameterComment=77, 
		SoundParameterLineComment=78, SoundParameterWS=79, SoundGain=80, SoundFadeIn=81, 
		SoundFadeOut=82, SoundSource=83, SoundSOUND=84, SoundStart1=85, SoundEnd1=86, 
		SoundDuration1=87, SoundStart2=88, SoundEnd2=89, SoundDuration2=90, SoundValue=91, 
		SoundParameterEnd=92, WaitCommandBlockComment=93, WaiyCommandLineComment=94, 
		WaitCommandWS=95, WaitName=96, WaitParameterStart=97, WaitCommandEnd=98, 
		WaitParameterBlockComment=99, WaitParameterLineComment=100, WaitParameterWS=101, 
		WaitDelay=102, WaitParameterEnd=103, GroupCommandBlockComment=104, GroupCommandLineComment=105, 
		GroupCommandWS=106, GroupName=107, GroupParameterStart=108, GroupCommandEnd=109, 
		GroupParameterComment=110, GroupParameterLineComment=111, GroupParameterWS=112, 
		GroupMembers=113, GroupMember=114, GroupParameterEnd=115, CallCommandBlockComment=116, 
		CallCommandLineComment=117, CallCommandWS=118, CallValue=119, CallParameterStart=120, 
		CallCommandEnd=121, CallParameterBlockComment=122, CallParameterLineComment=123, 
		CallParameterWS=124, CallParameterName=125, ParameterMembersBlockComment=126, 
		ParameterMembersLineComment=127, ParameterMembersWS=128, ParameterMember=129, 
		ParameterEnd=130, NumberWS=131, Number=132, LanguageWS=133, Language=134, 
		ParagraphValuesWS=135, AlignValue=136, CaseValue=137, BooleanWS=138, Boolean=139;
	public static final int
		RULE_mm = 0, RULE_narrator = 1, RULE_string = 2, RULE_sQString = 3, RULE_dQString = 4, 
		RULE_nQString = 5, RULE_command = 6, RULE_roleCommand = 7, RULE_soundCommand = 8, 
		RULE_waitCommand = 9, RULE_groupCommand = 10, RULE_settingsCommand = 11, 
		RULE_paragraphCommand = 12, RULE_callCommand = 13, RULE_commandEnd = 14, 
		RULE_callEnd = 15, RULE_roleName = 16, RULE_roleParameters = 17, RULE_roleParameter = 18, 
		RULE_rolePitchValue = 19, RULE_roleGainValue = 20, RULE_roleVolumeValue = 21, 
		RULE_roleRateValue = 22, RULE_roleAlias = 23, RULE_roleSOUND = 24, RULE_roleLanguageValue = 25, 
		RULE_soundName = 26, RULE_soundParameters = 27, RULE_soundParameter = 28, 
		RULE_soundGainValue = 29, RULE_soundFadeInValue = 30, RULE_soundFadeOutValue = 31, 
		RULE_soundSource = 32, RULE_soundSOUND = 33, RULE_soundStart1Value = 34, 
		RULE_soundEnd1Value = 35, RULE_soundDuration1Value = 36, RULE_soundStart2Value = 37, 
		RULE_soundEnd2Value = 38, RULE_soundDuration2Value = 39, RULE_waitName = 40, 
		RULE_waitParameters = 41, RULE_waitParameter = 42, RULE_waitDelayValue = 43, 
		RULE_groupName = 44, RULE_groupParameters = 45, RULE_groupParameter = 46, 
		RULE_groupMembers = 47, RULE_groupMember = 48, RULE_settingsParameters = 49, 
		RULE_settingsParameter = 50, RULE_settingsDefaultLang = 51, RULE_settingsTitle = 52, 
		RULE_settingsSoundsFolder = 53, RULE_settingsTmpFolder = 54, RULE_settingsShowValue = 55, 
		RULE_settingsDebugValue = 56, RULE_settingsAudioType = 57, RULE_settingsValue = 58, 
		RULE_paragraphName = 59, RULE_paragraphParameters = 60, RULE_paragraphParameter = 61, 
		RULE_paragraphAlignValue = 62, RULE_paragraphLeftMarginValue = 63, RULE_paragraphRightMarginValue = 64, 
		RULE_paragraphMaxWidthValue = 65, RULE_paragraphCaseValue = 66, RULE_paragraphValue = 67, 
		RULE_callValues = 68, RULE_callValue = 69, RULE_callParameters = 70, RULE_callParameter = 71, 
		RULE_callParameterName = 72, RULE_parameterMembers = 73, RULE_parameterMember = 74;
	private static String[] makeRuleNames() {
		return new String[] {
			"mm", "narrator", "string", "sQString", "dQString", "nQString", "command", 
			"roleCommand", "soundCommand", "waitCommand", "groupCommand", "settingsCommand", 
			"paragraphCommand", "callCommand", "commandEnd", "callEnd", "roleName", 
			"roleParameters", "roleParameter", "rolePitchValue", "roleGainValue", 
			"roleVolumeValue", "roleRateValue", "roleAlias", "roleSOUND", "roleLanguageValue", 
			"soundName", "soundParameters", "soundParameter", "soundGainValue", "soundFadeInValue", 
			"soundFadeOutValue", "soundSource", "soundSOUND", "soundStart1Value", 
			"soundEnd1Value", "soundDuration1Value", "soundStart2Value", "soundEnd2Value", 
			"soundDuration2Value", "waitName", "waitParameters", "waitParameter", 
			"waitDelayValue", "groupName", "groupParameters", "groupParameter", "groupMembers", 
			"groupMember", "settingsParameters", "settingsParameter", "settingsDefaultLang", 
			"settingsTitle", "settingsSoundsFolder", "settingsTmpFolder", "settingsShowValue", 
			"settingsDebugValue", "settingsAudioType", "settingsValue", "paragraphName", 
			"paragraphParameters", "paragraphParameter", "paragraphAlignValue", "paragraphLeftMarginValue", 
			"paragraphRightMarginValue", "paragraphMaxWidthValue", "paragraphCaseValue", 
			"paragraphValue", "callValues", "callValue", "callParameters", "callParameter", 
			"callParameterName", "parameterMembers", "parameterMember"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'Role'", "'Wait'", "'Sound'", "'Group'", "'Settings'", "'Paragraph'", 
			null, null, null, null, null, null, null, null, null, null, "'align'", 
			"'leftmargin'", "'rightmargin'", "'maxwidth'", "'case'", null, null, 
			null, null, null, null, null, null, null, null, "'title'", "'soundsfolder'", 
			"'tmp'", "'mp3'", "'show'", "'debug'", "'defaultlang'", "'linewidth'", 
			null, null, null, null, null, null, null, null, null, null, null, "'pitch'", 
			"'rate'", null, "'volume'", "'alias'", null, "'lang'", null, null, null, 
			null, null, null, null, null, null, null, null, null, "'fadein'", "'fadeout'", 
			"'source'", null, "'start1'", "'end1'", "'duration1'", "'start2'", "'end2'", 
			"'duration2'", null, null, null, null, null, null, null, null, null, 
			null, null, "'delay'", null, null, null, null, null, null, null, null, 
			null, null, "'members'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LineComment", "BlockComment", "WS", "SQString", "DQString", "NQString", 
			"String", "CommandStart", "CommandBlockComment", "CommandLineComment", 
			"CommandWS", "RoleCommand", "WaitCommand", "SoundCommand", "GroupCommand", 
			"SettingsCommand", "ParagraphCommand", "CallCommand", "ParagraphCommandBlockComment", 
			"ParagraphCommandLineComment", "ParagraphCommandWS", "ParagraphName", 
			"ParagraphParameterStart", "ParagraphCommandEnd", "ParagraphParameterComment", 
			"ParagraphParameterLineComment", "ParagraphParameterWS", "ParagraphAlign", 
			"ParagraphLeftMargin", "ParagraphRightMargin", "ParagraphMaxWidth", "ParagraphCase", 
			"ParagraphParameterEnd", "ParagraphValue", "SettingsCommandBlockComment", 
			"SettingsCommandLineComment", "SettingsCommandWS", "SettingsParameterStart", 
			"SettingsEnd", "SettingsParameterComment", "SettingsParameterLineComment", 
			"SettingsParameterWS", "SettingsTitle", "SettingsSoundsFolder", "SettingsTmpFolder", 
			"SettingsAudioType", "SettingsShow", "SettingsDebug", "SettingsDefaultLang", 
			"SettingsLineWidth", "SettingsValue", "SettingsParameterEnd", "RoleCommandBlockComment", 
			"RoleCommandLineComment", "RoleCommandWS", "RoleName", "RoleParameterStart", 
			"RoleCommandEnd", "RoleParameterBlockComment", "RoleParameterLineComment", 
			"RoleParameterWS", "RolePitch", "RoleRate", "RoleGain", "RoleVolume", 
			"RoleAlias", "RoleSOUND", "RoleLang", "RoleValue", "RoleParameterEnd", 
			"SoundCommandBlockComment", "SoundCommandLineComment", "SoundCommandWS", 
			"SoundName", "SoundParameterStart", "SoundCommandEnd", "SoundParameterComment", 
			"SoundParameterLineComment", "SoundParameterWS", "SoundGain", "SoundFadeIn", 
			"SoundFadeOut", "SoundSource", "SoundSOUND", "SoundStart1", "SoundEnd1", 
			"SoundDuration1", "SoundStart2", "SoundEnd2", "SoundDuration2", "SoundValue", 
			"SoundParameterEnd", "WaitCommandBlockComment", "WaiyCommandLineComment", 
			"WaitCommandWS", "WaitName", "WaitParameterStart", "WaitCommandEnd", 
			"WaitParameterBlockComment", "WaitParameterLineComment", "WaitParameterWS", 
			"WaitDelay", "WaitParameterEnd", "GroupCommandBlockComment", "GroupCommandLineComment", 
			"GroupCommandWS", "GroupName", "GroupParameterStart", "GroupCommandEnd", 
			"GroupParameterComment", "GroupParameterLineComment", "GroupParameterWS", 
			"GroupMembers", "GroupMember", "GroupParameterEnd", "CallCommandBlockComment", 
			"CallCommandLineComment", "CallCommandWS", "CallValue", "CallParameterStart", 
			"CallCommandEnd", "CallParameterBlockComment", "CallParameterLineComment", 
			"CallParameterWS", "CallParameterName", "ParameterMembersBlockComment", 
			"ParameterMembersLineComment", "ParameterMembersWS", "ParameterMember", 
			"ParameterEnd", "NumberWS", "Number", "LanguageWS", "Language", "ParagraphValuesWS", 
			"AlignValue", "CaseValue", "BooleanWS", "Boolean"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MmParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MmContext extends ParserRuleContext {
		public List<NarratorContext> narrator() {
			return getRuleContexts(NarratorContext.class);
		}
		public NarratorContext narrator(int i) {
			return getRuleContext(NarratorContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public MmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterMm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitMm(this);
		}
	}

	public final MmContext mm() throws RecognitionException {
		MmContext _localctx = new MmContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SQString) | (1L << DQString) | (1L << NQString) | (1L << CommandStart))) != 0)) {
				{
				setState(152);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SQString:
				case DQString:
				case NQString:
					{
					setState(150);
					narrator();
					}
					break;
				case CommandStart:
					{
					setState(151);
					command();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NarratorContext extends ParserRuleContext {
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public NarratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_narrator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterNarrator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitNarrator(this);
		}
	}

	public final NarratorContext narrator() throws RecognitionException {
		NarratorContext _localctx = new NarratorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_narrator);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(158); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(157);
					string();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(160); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public SQStringContext sQString() {
			return getRuleContext(SQStringContext.class,0);
		}
		public DQStringContext dQString() {
			return getRuleContext(DQStringContext.class,0);
		}
		public NQStringContext nQString() {
			return getRuleContext(NQStringContext.class,0);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SQString:
				{
				setState(162);
				sQString();
				}
				break;
			case DQString:
				{
				setState(163);
				dQString();
				}
				break;
			case NQString:
				{
				setState(164);
				nQString();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SQStringContext extends ParserRuleContext {
		public TerminalNode SQString() { return getToken(MmParser.SQString, 0); }
		public SQStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sQString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterSQString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitSQString(this);
		}
	}

	public final SQStringContext sQString() throws RecognitionException {
		SQStringContext _localctx = new SQStringContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sQString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(SQString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DQStringContext extends ParserRuleContext {
		public TerminalNode DQString() { return getToken(MmParser.DQString, 0); }
		public DQStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dQString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterDQString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitDQString(this);
		}
	}

	public final DQStringContext dQString() throws RecognitionException {
		DQStringContext _localctx = new DQStringContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dQString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(DQString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NQStringContext extends ParserRuleContext {
		public TerminalNode NQString() { return getToken(MmParser.NQString, 0); }
		public NQStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nQString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterNQString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitNQString(this);
		}
	}

	public final NQStringContext nQString() throws RecognitionException {
		NQStringContext _localctx = new NQStringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nQString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(NQString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CommandEndContext commandEnd() {
			return getRuleContext(CommandEndContext.class,0);
		}
		public TerminalNode CommandStart() { return getToken(MmParser.CommandStart, 0); }
		public RoleCommandContext roleCommand() {
			return getRuleContext(RoleCommandContext.class,0);
		}
		public RoleNameContext roleName() {
			return getRuleContext(RoleNameContext.class,0);
		}
		public RoleParametersContext roleParameters() {
			return getRuleContext(RoleParametersContext.class,0);
		}
		public SoundCommandContext soundCommand() {
			return getRuleContext(SoundCommandContext.class,0);
		}
		public SoundNameContext soundName() {
			return getRuleContext(SoundNameContext.class,0);
		}
		public SoundParametersContext soundParameters() {
			return getRuleContext(SoundParametersContext.class,0);
		}
		public WaitCommandContext waitCommand() {
			return getRuleContext(WaitCommandContext.class,0);
		}
		public WaitNameContext waitName() {
			return getRuleContext(WaitNameContext.class,0);
		}
		public WaitParametersContext waitParameters() {
			return getRuleContext(WaitParametersContext.class,0);
		}
		public GroupCommandContext groupCommand() {
			return getRuleContext(GroupCommandContext.class,0);
		}
		public GroupNameContext groupName() {
			return getRuleContext(GroupNameContext.class,0);
		}
		public GroupParametersContext groupParameters() {
			return getRuleContext(GroupParametersContext.class,0);
		}
		public SettingsCommandContext settingsCommand() {
			return getRuleContext(SettingsCommandContext.class,0);
		}
		public SettingsParametersContext settingsParameters() {
			return getRuleContext(SettingsParametersContext.class,0);
		}
		public ParagraphCommandContext paragraphCommand() {
			return getRuleContext(ParagraphCommandContext.class,0);
		}
		public ParagraphNameContext paragraphName() {
			return getRuleContext(ParagraphNameContext.class,0);
		}
		public ParagraphParametersContext paragraphParameters() {
			return getRuleContext(ParagraphParametersContext.class,0);
		}
		public CallCommandContext callCommand() {
			return getRuleContext(CallCommandContext.class,0);
		}
		public CallValuesContext callValues() {
			return getRuleContext(CallValuesContext.class,0);
		}
		public CallParametersContext callParameters() {
			return getRuleContext(CallParametersContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(173);
			match(CommandStart);
			setState(201);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RoleCommand:
				{
				setState(174);
				roleCommand();
				setState(175);
				roleName();
				setState(176);
				roleParameters();
				}
				break;
			case SoundCommand:
				{
				setState(178);
				soundCommand();
				setState(179);
				soundName();
				setState(180);
				soundParameters();
				}
				break;
			case WaitCommand:
				{
				setState(182);
				waitCommand();
				setState(183);
				waitName();
				setState(184);
				waitParameters();
				}
				break;
			case GroupCommand:
				{
				setState(186);
				groupCommand();
				setState(187);
				groupName();
				setState(188);
				groupParameters();
				}
				break;
			case SettingsCommand:
				{
				setState(190);
				settingsCommand();
				setState(191);
				settingsParameters();
				}
				break;
			case ParagraphCommand:
				{
				setState(193);
				paragraphCommand();
				setState(194);
				paragraphName();
				setState(195);
				paragraphParameters();
				}
				break;
			case CallCommand:
				{
				setState(197);
				callCommand();
				setState(198);
				callValues();
				setState(199);
				callParameters();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			setState(203);
			commandEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoleCommandContext extends ParserRuleContext {
		public TerminalNode RoleCommand() { return getToken(MmParser.RoleCommand, 0); }
		public RoleCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roleCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterRoleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitRoleCommand(this);
		}
	}

	public final RoleCommandContext roleCommand() throws RecognitionException {
		RoleCommandContext _localctx = new RoleCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_roleCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			match(RoleCommand);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SoundCommandContext extends ParserRuleContext {
		public TerminalNode SoundCommand() { return getToken(MmParser.SoundCommand, 0); }
		public SoundCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_soundCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).enterSoundCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MmParserListener ) ((MmParserListener)listener).exitSoundCommand(this);
		}
	}
